started to work on Model packages and fixed check-style plugin